assets/css/global-nav.css
:root {
    --nav-height: 48px;
    --nav-gap-x: 16px;
    --nav-bg: rgba(22, 22, 23, 0.8);
    --nav-panel-bg: #fff;
    --nav-border: #e6e6e6;
    --nav-width: 90rem;
}

.g_header {
    background-color: var(--nav-bg);
    backdrop-filter: blur(10px);
    width: 100%;
    position: fixed;
    z-index: 50;
}

.g_nav {
    height: var(--nav-height);
    max-width: 90rem;
    width: 100%;
    display: flex;
    align-items: stretch;
    justify-content: space-between;
    gap: var(--nav-gap-x);
    margin: 0 auto;
    position:relative;
}

.g_nav_menu,
.g_nav_menu_list,
.g_nav_menu_list>li {
    display: contents;
}

.dev_nav_buttons {
    display: flex;
    justify-content: space-between;
    gap: var(--nav-gap-x);
    position: relative;
}

.g_nav_item {
    flex-shrink: 0;
    flex-grow: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 4px 12px;
    color: var(--_brand---tintsshades--brand-500)
}

.g_nav_item:hover {
    color: var(--_theme---color--text);
}

/* .dev_nav_buttons .g_nav_item {
    aspect-ratio: 1 / 1;
} */

#g_nav_btn_mobile_menu {
    display: none;
}

.g_nav summary {
    height: 100%;
    width: 100%;
}

@media (max-width: 1024px) {
    #g_nav_btn_mobile_menu {
        display: block;
    }

    .g_nav_menu {
        display: none;
        background-color: rgba(22, 22, 23);
        position: absolute;
        height: calc(100vh - var(--nav-height));
        top: 100%;
        left: 0;
        right: 0;
        padding-top: 32px;        
    }

    .g_nav_menu[open] {
        display: block;
    }

    .g_nav_menu_list {
        display: flex;
        flex-direction: column;
        align-items: stretch;
        gap: var(--nav-gap-x);
        height: 100%;
    }

    .g_nav_menu :is(a, summary) {
        justify-content: left;
        font-size: 24px;
    }
}

.u-details-overlay {
    position: relative;
}

.u-details-overlay>div {
    position: absolute;
}

.u-details-overlay.bottom {
    top: 100%;
    left: 0;
}

.u-details-overlay.right>div {
    top: 0;
    left: 100%;
}

.u-details-overlay.left>div {
    top: 0;
    right: 100%;
}

.u-details-overlay.bottom>div {
    top: 100%;
    left: 0;
}

